# -molprop-toolkit

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  SIMILARITY_FEATURE_README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pages.yml
analyzers/: analyzer_clustering.py  analyzer_cns.py  analyzer_cyp.py  analyzer_developability.py  analyzer_herg.py  analyzer_lead.py  analyzer_master.py  analyzer_medchem.py  analyzer_metabolism.py  analyzer_oral.py  analyzer_permeability.py  analyzer_pk.py  analyzer_qed.py  analyzer_ro3.py  analyzer_ro5.py  analyzer_sa.py  analyzer_scaffolds.py  analyzer_solubility.py  analyzer_toxicity.py
calculators/: depict.py  developability.py  geom3d.py  ionization.py  mpo_v4.py  mpo_v5.py  prep.py  protomers.py  sa_score.py  stereo.py  tautomers.py
docs/: categories.md  columns.md  columns_schema.md  feature_families.md  index.html  quickstart.html  schema.json
docs/assets/: style.css
docs/retrosynthesis-demo/: index.html  routes_summary.json  targets.smi
docs/retrosynthesis-demo/assets/: style.css
docs/retrosynthesis-demo/targets/: Aspirin.html  Caffeine.html  Diazepam.html  Ibuprofen.html  Lidocaine.html
docs/tools/: index.html  ligand-prep.html  molprop-analyze.html  molprop-calc-v4.html  molprop-calc-v5.html  molprop-featurize.html  molprop-picklists.html  molprop-report.html  molprop-retro.html  molprop-series.html  molprop-similarity.html  molprop-sketch.html  similarity.md  validate-schema.html
examples/: example.smi  picklists.example.json  run_pipeline.sh  similarity_example.smi
molprop_toolkit/: __init__.py  cli.py  schema.py
molprop_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
molprop_toolkit/core/: __init__.py  columns.py  io.py  metadata.py  printing.py  registry.py
molprop_toolkit/features/: __init__.py  fingerprints_ml.py  fragments.py  functional_groups.py  graphs.py  sparse_matrix.py
molprop_toolkit/picklists/: __init__.py  builtins.py  engine.py  html.py
molprop_toolkit/reporting/: __init__.py  report_builder.py
molprop_toolkit/resources/: __init__.py
molprop_toolkit/similarity/: __init__.py  fingerprints.py  metrics.py  search.py
molprop_toolkit/tools/: similarity_cli.py
tests/: test_core_columns.py  test_retro_entrypoint.py  test_schema_load_and_validate.py  test_similarity.py  test_task8_developability.py
tests/data/: fixture_results.csv
tools/: build_report.py  featurize.py  generate_columns_md_from_schema.py  molprop_similarity.py  picklists.py  retrosynthesis.py  series_analytics.py  sketch_structures.py  validate_csv_schema.py
